# pc-conector

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.ps1  clean-rust.ps1  clean-rust2.ps1  iniciar_pc_conector.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  PROGRESS.md  PROJECT_OVERVIEW.md  REQUIREMENTS.md  TECH_STACK.md  VISION.md
para-linux/: AGENTE_PROMPT.md
pc-conector/: INSTRUCCIONES.md  README.md  index.html  package-lock.json  package.json
pc-conector/docs/: ARCHITECTURE.md  PROGRESS.md  PROJECT_OVERVIEW.md  REQUIREMENTS.md  TECH_STACK.md  VISION.md
pc-conector/src/: App.css  App.tsx  AudioPanel.tsx  AudioPatchbay.tsx  ConnectionRequestModal.tsx  Icons.tsx  LinkedDevicesPanel.tsx  NetworkStatsPanel.tsx  ScreenArrangement.tsx  ServicesPanel.tsx  SettingsPanel.tsx  ShareModal.tsx  index.css  types.ts
pc-conector/src-tauri/: Cargo.toml  tauri.conf.json
pc-conector/src-tauri/.cargo/: config.toml
pc-conector/src-tauri/icons/: icon.icns
pc-conector/src-tauri/src/: audio.rs  clipboard.rs  config.rs  discovery.rs  input.rs  lib.rs  network.rs
