[package]
name = "app"
version = "0.1.0"
description = "PC Conector - Conecta dos PCs en red local"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# --- Networking ---
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.12"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
rcgen = "0.13"

# --- Input Capture (Mouse & Keyboard) ---
rdev = "0.5"
enigo = { version = "0.2", features = ["serde"] }

# --- Audio ---
cpal = "0.15"
opus = "0.3"

# --- Clipboard ---
arboard = "2"

# --- Utilities ---
dirs-next = "2"
whoami = "1"

[patch.crates-io]
